package pt.tpereira.cashierhelper.view;

import android.content.Context;
import android.view.View;

public class CharsView extends View {


    public CharsView(Context context) {
        super(context);
    }

}
