@startuml

title __VIEW's Class Diagram__\n

  namespace pt.tpereira.cashierhelper {
    namespace view {
      class CharsView {
          + CharsView()
      }
    }
  }
  

  namespace pt.tpereira.cashierhelper {
    namespace view {
      class ProductsView {
          + ProductsView()
      }
    }
  }
  

  pt.tpereira.cashierhelper.view.CharsView -up-|> android.view.View
  android.view.View.BaseSavedState -up-|> android.view.AbsSavedState
  pt.tpereira.cashierhelper.view.ProductsView -up-|> android.view.View
  android.view.View.BaseSavedState -up-|> android.view.AbsSavedState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
